debut de header

--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -8,6 +8,24 @@
     </head>
 
 <body>
+    <div id="bloc_page"> 
+        <header>
+            <div id="titre_principal">
+                <div id="logo">
+                    <img src="C:/Users/perso/Projet_n_2_michel_mbaka-3/Projet_2_Reservia/images/logo/Reservia@3x.png" alt="Logo Reservie" />       
+                </div>
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <h2>En plein centre ville ou en pleine nature</h2>
+            </div>
+
+        </header>
+        <section>
+
+        </section>
+        <footer>
+
+        </footer>
+    </div>    
     
 </body>
 </html><
