Premier test header

--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -10,6 +10,7 @@
 <body>
     <div id="bloc_page"> 
         <header>
+            <div id=bloc_header>
             <div id="titre_principal">
                 <div id="logo">
                     <img src="C:/Users/perso/Projet_n_2_michel_mbaka-3/Projet_2_Reservia/images/logo/Reservia@3x.png" alt="Logo Reservie" />       
@@ -17,7 +18,28 @@
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <h2>En plein centre ville ou en pleine nature</h2>
             </div>
+            <div id=Recherche>
+                <div id=res1>
+                </div>
+                <div id=res2>Marseille,France</div>
+                <div id=res3>Recherche</div>
+            </div>
+            <div id=Filtre>
+                Filtres
+                <div id="eco">Economique</div>
+                <div id="fam">Familial</div>
+                <div id="rom">Romantique</div>
+                <div id="ani">Animaux autorisés</div>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Hébergement</a></li>
+                    <li><a href="#">Activités</a></li>
+                    <li><a href="#">S'inscrire</a></li>
+                </ul>
+            </nav>
 
+        </div>
         </header>
         <section>
 
