--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	
+        <link rel="stylesheet" href="https://use.fontawesome.com/release/v5.15.1/css/all.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/release/v5.15.1/css/v4-shims.css">
         <meta charset="utf-8" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -17,33 +18,35 @@
                     <div class="logo">
                         <img src="Projet_2_Reservia/images/logo/Reservia@3x.png" alt="Logo Reservie" />       
                     </div>
-                    <div>
-                       <div class="dh"><h1>Trouvez votre hébergement pour des vacances de rêve</h1></div>
-                       <div class="dp"><p>En plein centre ville ou en pleine nature</p></div> 
+                    <nav>
+                        <ul>
+                            <li><a href="#">Hébergement</a></li>
+                            <li><a href="#">Activités</a></li>
+                            <li><a href="#">S'inscrire</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="par">
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <h2>En plein centre ville ou en pleine nature</h2> 
+                </div>
+                <div class="rf">
+                    <div class=Recherche>
+                        <div class="res1"><i class="fas fa-map-marker-alt"></i></div>
+                        <div class="res2">Marseille, France</div>
+                        <div class="res3">Recherche</div>
+                    </div></header> </br>
+                    <div class=Filtre>
+                        <div class="fil">Filtres</div>
+                        <div class="eco">Economique</div>
+                        <div class="fam">Familial</div>
+                        <div class="rom">Romantique</div>
+                        <div class="ani">Animaux autorisés</div>
+                    </div>
+                    <div >
+                        <p>plus de 500 logements sont disponibles dans cette ville</p>   
                     </div>
                 </div>
-                <nav>
-                    <ul>
-                        <li><a href="#">Hébergement</a></li>
-                        <li><a href="#">Activités</a></li>
-                        <li><a href="#">S'inscrire</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class=Recherche>
-                <div class="res1">GPS</div>
-                <div class="res2">Marseille, France</div>
-                <div class="res3">Recherche</div>
-            </div>
-            <div class=Filtre>
-                <div class="fil">Filtres</div>
-                <div class="eco">Economique</div>
-                <div class="fam">Familial</div>
-                <div class="rom">Romantique</div>
-                <div class="ani">Animaux autorisés</div>
-            </div>
-            <div class="par">
-                <p>plus de 500 logements sont disponibles dans cette ville</p>   
             </div>
         </header>
         <section>
