--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://use.fontawesome.com/release/v5.15.1/css/all.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/release/v5.15.1/css/v4-shims.css">
         <meta charset="utf-8" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link rel="stylesheet" href="Projet_2_Michel_Mbaka.css" />
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <title>Projet n°2 Michel Mbaka</title>
     </head>
 
@@ -36,22 +35,67 @@
                         <div class="res2">Marseille, France</div>
                         <div class="res3">Recherche</div>
                     </div></header> </br>
-                    <div class=Filtre>
+                    <div class="Filtre">
                         <div class="fil">Filtres</div>
-                        <div class="eco">Economique</div>
-                        <div class="fam">Familial</div>
-                        <div class="rom">Romantique</div>
-                        <div class="ani">Animaux autorisés</div>
+                        <div class="ic1"><i class="fas fa-money-bill-wave" style="color:blue; font-size:15px"></i></div><div class="eco">Economique</div>
+                        <div class="ic2"><i class="fas fa-child" style="color:blue; font-size:15px"></i></div><div class="fam">Familial</div>
+                        <div class="ic3"><i class="fas fa-heart"  style="color:blue; font-size:15px"></i></div><div class="rom">Romantique</div>
+                        <div class="ic4"><i class="fas fa-dog" style="color:blue; font-size:15px"></i></div><div class="ani">Animaux autorisés</div>
                     </div>
-                    <div >
-                        <p>plus de 500 logements sont disponibles dans cette ville</p>   
+                    <div class="ip">
+                        <div class="ic5"><i class="fas fa-info" style="color:blue; font-size:10px"></i></div>
+                        <div class="ic55">plus de 500 logements sont disponibles dans cette ville</div>   
                     </div>
                 </div>
             </div>
         </header>
-        <section>
+        <section class="sec1">
+           <div class="heb">
+        </div>
+
+        <div class="pop">
+            <div class="po1">
+                <div class="p1"><strong>plus populaires</strong></div>
+                <div class="p11"><i class="fas fa-chart-line"style="color:black; font-size:17px"></i></div>
+            </div>
+            <div class="po2">
+                <div class="p2">
+                    <img src="Projet_2_Reservia/images/hebergements/4_small/hebergement.jpg" alt=" Photo Hebergement" />       
+                </div>
+                <div class="p22">
+                    <h1>Hotel Le soleil du matin </h1>
+                    <h2>nuit à partir de 128€</h2>
+                    <i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i>
+
+                </div>
+            </div>
+            <div class="po3">
+                <div class="p3">
+                    <img src="Projet_2_Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt=" Photo aw-creative-VGs8z60yT2c-unsplash " />       
+                </div>
+                <div class="p33">
+                    <h1>Au coeur de l'eau Chambre d'hôtes </h1>
+                    <h2>nuit à partir de 71€</h2>
+                    <i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:grey; font-size:10px"></i>
+                </div>
+            </div>
+            <div class="po4">
+                <div class="p4">
+                    <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="  Photo febrian-zakaria-sjvU0THccQA-unsplash" />       
+                </div>
+                <div class="p44">
+                    <h1>Au coeur de l'eau Chambre d'hôtes </h1>
+                    <h2>nuit à partir de 71€</h2>
+                    <i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:grey; font-size:10px"></i>
+                </div>
+            </div>
+       </div> 
+
+        </section>
+        <section class="sec2">
             
         </section>
+
         <footer>
 
         </footer>
