--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -41,59 +41,193 @@
                         <div class="ic2"><i class="fas fa-child" style="color:blue; font-size:15px"></i></div><div class="fam">Familial</div>
                         <div class="ic3"><i class="fas fa-heart"  style="color:blue; font-size:15px"></i></div><div class="rom">Romantique</div>
                         <div class="ic4"><i class="fas fa-dog" style="color:blue; font-size:15px"></i></div><div class="ani">Animaux autorisés</div>
-                    </div>
+                    </div><br/>
                     <div class="ip">
                         <div class="ic5"><i class="fas fa-info" style="color:blue; font-size:10px"></i></div>
                         <div class="ic55">plus de 500 logements sont disponibles dans cette ville</div>   
                     </div>
                 </div>
-            </div>
+            </div><br/>
         </header>
         <section class="sec1">
-           <div class="heb">
-        </div>
+            <div class="ber">
+                <div class="be1">
+                    <strong>Heberegement à Marseille</strong>
+                </div>
+                <div class="bloc_img">
+                    <div class="be2">
+                        <div class="b2">
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt=" Photo marcus-loke-WQJvWU_HZFo-unsplash" />       
+                        </div>
+                        <div class="b22">
+                             <h1>Auberge la Cannablère</h1>
+                             <h2>nuit à partir de 25€</h2>
+                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                             <i class="fas fa-star" style="color:grey; font-size:10px"></i>
+                        </div>
+                    </div>
+                    <div class="be3">
+                        <div class="b3">
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt=" Photo fred-kleber-gTbaxaVLvsg-unsplash" />       
+                        </div>
+                        <div class="b33">
+                            <h1>Hôtel du port</h1>
+                            <h2>nuit à partir de 52€</h2>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        </div>
+                    </div>
+                    <div class="be4">
+                        <div class="b4">
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="  Photo reisetopia-B8WIgxA_PFU-unsplash" />       
+                        </div>
+                        <div class="b44">
+                            <h1>Hôtel les Mouettes </h1>
+                            <h2>nuit à partir de 76€</h2>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:grey; font-size:10px"></i>
+                        </div>
+                    </div> 
+                    <div class="be5">
+                        <div class="b5">
+                          <img src="Projet_2_Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt=" Photo annie-spratt-Eg1qcIitAuA-unsplash" />       
+                        </div>
+                        <div class="b55">
+                          <h1>Hotel de la mer </h1>
+                          <h2>nuit à partir de 46€</h2>
+                          <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                          <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                          <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                          <i class="fas fa-star" style="color:grey; font-size:10px"></i>
+                          <i class="fas fa-star" style="color:grey; font-size:10px"></i>
+                        </div>
+                    </div>
+                    <div class="be6">
+                        <div class="b6">
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt=" Photo nicate-lee-kT-ZyaiwBe0-unsplash" />       
+                        </div>
+                        <div class="b66">
+                            <h1>Auberge le Panier </h1>
+                            <h2>nuit à partir de 23€</h2>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:grey; font-size:10px"></i>
+                        </div> 
+                    </div> 
+                    <div class="be7">
+                        <div class="b7">
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="  Photo febrian-zakaria-M6S1WvfW68A-unsplash" />       
+                        </div>
+                        <div class="b77">
+                            <h1>Hôtel chez Amina</h1>
+                            <h2>nuit à partir de 96€</h2>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                            <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        </div>
+                    </div> 
+                </div>
+                <div class="be8">
+                    <h2> <strong>Afficher plus</strong></h2>
+                </div>
+            </div>
 
-        <div class="pop">
-            <div class="po1">
-                <div class="p1"><strong>plus populaires</strong></div>
-                <div class="p11"><i class="fas fa-chart-line"style="color:black; font-size:17px"></i></div>
-            </div>
-            <div class="po2">
-                <div class="p2">
-                    <img src="Projet_2_Reservia/images/hebergements/4_small/hebergement.jpg" alt=" Photo Hebergement" />       
+            <div class="pop">
+                <div class="po1">
+                    <div class="p1">
+                         <strong>plus populaires</strong>
+                    </div>
+                    <div class="p11">
+                         <i class="fas fa-chart-line"style="color:black; font-size:17px"></i>
+                    </div>
                 </div>
-                <div class="p22">
-                    <h1>Hotel Le soleil du matin </h1>
-                    <h2>nuit à partir de 128€</h2>
-                    <i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i>
-
+                <div class="po2">
+                    <div class="p2">
+                        <img src="Projet_2_Reservia/images/hebergements/4_small/hebergement.jpg" alt=" Photo Hebergement" />       
+                    </div>
+                    <div class="p22">
+                        <h1>Hotel Le soleil du matin </h1>
+                        <h2>nuit à partir de 128€</h2>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                    </div>
                 </div>
-            </div>
-            <div class="po3">
-                <div class="p3">
-                    <img src="Projet_2_Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt=" Photo aw-creative-VGs8z60yT2c-unsplash " />       
+                <div class="po3">
+                    <div class="p3">
+                        <img src="Projet_2_Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt=" Photo aw-creative-VGs8z60yT2c-unsplash " />       
+                    </div>
+                    <div class="p33">
+                        <h1>Au coeur de l'eau Chambre d'hôtes </h1>
+                        <h2>nuit à partir de 71€</h2>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:grey; font-size:10px"></i>
+                    </div>
                 </div>
-                <div class="p33">
-                    <h1>Au coeur de l'eau Chambre d'hôtes </h1>
-                    <h2>nuit à partir de 71€</h2>
-                    <i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:grey; font-size:10px"></i>
+                <div class="po4">
+                    <div class="p4">
+                        <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="  Photo febrian-zakaria-sjvU0THccQA-unsplash" />       
+                    </div>
+                    <div class="p44">
+                        <h1>Au coeur de l'eau Chambre d'hôtes </h1>
+                        <h2>nuit à partir de 71€</h2>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:blue; font-size:10px"></i>
+                        <i class="fas fa-star" style="color:grey; font-size:10px"></i>
+                    </div>
                 </div>
-            </div>
-            <div class="po4">
-                <div class="p4">
-                    <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="  Photo febrian-zakaria-sjvU0THccQA-unsplash" />       
-                </div>
-                <div class="p44">
-                    <h1>Au coeur de l'eau Chambre d'hôtes </h1>
-                    <h2>nuit à partir de 71€</h2>
-                    <i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:blue; font-size:10px"></i><i class="fas fa-star" style="color:grey; font-size:10px"></i>
-                </div>
-            </div>
-       </div> 
-
+            </div> 
         </section>
         <section class="sec2">
-            
+            <div class="b_sec2">
+                <div>
+
+                </div>
+                <div class="b_ele">
+                    <div class="b_el1">
+
+                    </div>
+                    <div class="b_el2">
+                        <div class="b_e2">
+
+                        </div>
+                        <div class="b_e22">
+
+                        </div>
+                    </div>
+                    <div class="b_el3">
+
+                    </div>
+                    <div class="b_el4">
+                        <div class="b_e4">
+
+                        </div>
+                        <div class="b_e44">
+
+                        </div>
+                    </div>
+                </div>
+            </div> 
         </section>
 
         <footer>
