--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link rel="stylesheet" href="Projet_2_Michel_Mbaka.css" />
@@ -197,33 +198,63 @@
                     </div>
                 </div>
             </div> 
-        </section>
+        </section><br/>
         <section class="sec2">
             <div class="b_sec2">
-                <div>
-
-                </div>
+                <div class="b_se1">
+                   <strong>Activites à Marseille</strong>
+                </div><br/>
                 <div class="b_ele">
                     <div class="b_el1">
-
+                        <div class="b_el11">
+                            <img src="Projet_2_Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="  Photo reno-laithienne-QUgJhdY5Fyk-unsplash" />       
+                        </div>
+                        <div class="b_el111">
+                            <h2>Vieux port</h2>
+                        </div>
                     </div>
                     <div class="b_el2">
                         <div class="b_e2">
-
+                            <div class="b_e22">
+                                <img src="Projet_2_Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="  Photo paul-hermann-QFTrLdQIRhI-unsplash" />       
+                            </div>
+                            <div class="b_e222">
+                               <h2><strong> Fort de Pomègues</strong></h2>
+                            </div>
                         </div>
-                        <div class="b_e22">
-
+                        <div class="b_2">
+                            <div class="b_22">
+                                <img src="Projet_2_Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="  Photo kevin-hikari-rV_Qd1l-VXg-unsplash" />       
+                            </div>
+                            <div class="b_222">
+                                <h2><strong>Îles du Frioul</strong></h2>
+                            </div>
                         </div>
                     </div>
                     <div class="b_el3">
-
+                        <div class="b_el33">
+                            <img src="Projet_2_Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="  Photo kilyan-sockalingum-NR8-cBCN3aI-unsplash" />       
+                        </div>
+                        <div class="b_el333">
+                            <h2><strong>Parc national des Calanques</strong></h2>
+                        </div>
                     </div>
                     <div class="b_el4">
                         <div class="b_e4">
-
+                            <div class="b_e44">
+                                <img src="Projet_2_Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="  Photo florian-wehde-xW9e8gdotxI-unsplash" />       
+                            </div>
+                            <div class="b_e444">
+                                <h2><strong>Notre-Dame-de-la-Garde</strong></h2>
+                            </div>
                         </div>
-                        <div class="b_e44">
-
+                        <div class="b_4">
+                            <div class="b_44">
+                                <img src="Projet_2_Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="  Photo lena-paulin-wH2-EJoDcV0-unsplash" />       
+                            </div>
+                            <div class="b_444">
+                                <h2><strong>Parc Longchamp</strong></h2>
+                            </div>
                         </div>
                     </div>
                 </div>
